# us-rail-performance-archiver

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  backfill.py  cert_check.py  compose.prod.yml  docker-compose.yml  dockerfile  gold.py  main.py  prune.py  pyproject.toml  rollup.py  ship.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_feed_request.yml  question.yml
.github/workflows/: build.yml  datadog.yml  deploy.yml  lint.yml  test.yml
analysis/: __init__.py  adherence.py  alert_classifier.py  alert_snapshot.py  event_export.py  gtfs_fetcher.py  marta_day.py  metrics.py  normalize.py  segment_speed.py  static_gtfs.py  timeutil.py  trip_updates_day.py  vehicle_day.py
archiver/: __init__.py  archiver.py  auth.py  backfill.py  config.py  decoder.py  dispatcher.py  feed.py  health.py  landing_layout.py  landing_uploader.py  loader.py  logger.py  parallel.py  parser.py  poll_state.py  rate_limit.py  response.py  rollup.py  scheduler.py  shard.py  shipper.py  sink.py  source.py  summary.py  telemetry.py  telemetry_datadog.py  uploader.py  writer.py
config/: feeds.yaml
dashboards/: rail-archiver.json
deploy/: README.md
docs/design/: rt-schema-drift.md  sharded-ingest.md  split-poll-rollup.md
monitors/: rail-archiver.json
notebooks/: gold_metrics.ipynb  wmata_motion.ipynb
scripts/: build_alert_snapshot.py  export_dashboard.py  export_events.py  export_marta_events.py  feed_quality.py  fetch_static_gtfs.py  gen_feeds_from_mdb.py  merge_candidates.py  migrate_rt_schema.py  s3_cost_report.py  sync_datadog.py  validate_candidates.py
site/: app.js  index.html
terraform/: box.tf  landing.tf  lifecycle.tf  main.tf  outputs.tf  rollup.tf  rollup_iam.tf  rollup_schedule.tf  rollup_secrets.tf  variables.tf
tests/: conftest.py  test_analysis_adherence.py  test_analysis_event_export.py  test_analysis_gtfs_fetcher.py  test_analysis_marta_day.py  test_analysis_metrics.py  test_analysis_normalize.py  test_analysis_segment_speed.py  test_analysis_static_gtfs.py  test_analysis_trip_updates_day.py  test_analysis_vehicle_day.py  test_archive_classification.py  test_archiver.py  test_auth.py  test_config.py  test_decoder.py  test_dispatcher.py  test_export_dashboard.py  test_feed_quality.py  test_gold_build_speed.py  test_gold_normalize.py  test_health.py  test_landing_uploader.py  test_parser.py  test_poll_state.py  test_rate_limit.py  test_response.py  test_rollup.py  test_scheduler.py  test_shard.py  test_shipper.py  test_sink.py  test_source.py  test_summary.py  test_telemetry.py  test_telemetry_datadog.py  test_writer.py  vulture_whitelist.py
tests/fakes/: client.py  dogstatsd.py  recording_telemetry.py  sink.py  uploader.py
