[project]
name = "us-rail-performance-archiver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.9",
    "datadog>=0.52.1",
    "gtfs-realtime-bindings>=2.0.0",
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.12",
    "vulture>=2.14",
]

[tool.ruff.lint.per-file-ignores]
# The vulture whitelist is intentionally a list of bare, undefined names so each
# counts as a "use" — F821 (undefined name) is expected here, not a bug.
"tests/vulture_whitelist.py" = ["F821"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"
asyncio_mode = "auto"

[tool.vulture]
# Dead-code finder. Scans the source packages + top-level entrypoints; data dirs,
# notebooks, and tests are excluded (tests are entrypoints pytest calls by name,
# so vulture would flag every test_* as unused). Run with `make deadcode`.
paths = ["analysis", "archiver", "scripts", "backfill.py", "gold.py", "main.py", "prune.py", "rollup.py", "ship.py", "tests/vulture_whitelist.py"]
exclude = ["notebooks/", "__pycache__/"]
# pydantic hooks are called by the framework, not our code — don't report them.
ignore_decorators = ["@field_validator", "@model_validator", "@field_serializer", "@cached_property"]
# 60 flags unused attributes (noisy with pydantic field models); 80 keeps it to
# unused functions/classes/imports/variables we can act on. Lower it to hunt harder.
min_confidence = 80
sort_by_size = true
